--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@ current: index
 
 <section class="container">
   <div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
+    header
   </div>
 </section>
