--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,168 @@ engine: ejs
 current: index
 ---
 
-<section class="container">
-  <div class="alert alert-primary" role="alert">
-    header
+<!-- 1.生活哲學 -->
+<section class="lifeStyleBlock">
+  <div class="container">
+    <div class="row">
+      <!-- 文字區 Lifestyle -->
+      <div class="col-6 lifeStyleSet">
+        <div class="row">
+          <h1 class="mb-4">Enjoy Your <br />Minimalist Lifestyle.</h1>
+          <h4 class="mb-7">
+            The best crafts in Taiwan. Get your free <br />
+            shipping on the first order.
+          </h4>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+            <a class="btn btn-success btn-lg btn-block" href="#" role="button">Shop now</a>
+          </div>
+        </div>
+      </div>
+      <!-- 圖片區 Lifestyle -->
+      <div class="col-6 lifeStyleBg"></div>
+    </div>
   </div>
+</section>
+
+<!-- 2.產品特色 -->
+<section class="features">
+  <div class="container">
+    <!-- #1 -->
+    <div class="row mb-5">
+      <!-- 左邊 -->
+      <div class="col-6">
+        <img src="./assets/images/123.jpg" class="img-fluid" alt="picture">
+      </div>
+      <!-- 右邊 -->
+      <div class="col-6">
+        <div class="pl125 d-flex flex-column">
+          <h4 class="mt121 font-weight-bold pb-3">Special Clays</h4>
+          <h5 class="pb-4">A general body formulation for contemporary <br />earthenware is 25% kaolin, 25% ball clay,
+            35%<br />quartz and 15% feldspar.</h5>
+          <h5 class="font-weight-bold featuresTxtColorGreen">Learn More</h5>
+        </div>
+      </div>
+    </div>
+
+    <!-- #2 -->
+    <div class="row mb-5">
+      <!-- 左邊 -->
+      <div class="col-6">
+        <div class="pr125 d-flex flex-column text-right">
+          <h4 class="mt121 font-weight-bold pb-3">Less is more</h4>
+          <h5 class="pb-4">
+            Trimming pottery can transform a weighty Earth-<br />bound pot into one that is a pleasure to hold,
+            look<br /> at, and use.
+          </h5>
+          <h5 class="font-weight-bold featuresTxtColorGreen">Learn More</h5>
+        </div>
+      </div>
+      <!-- 右邊 -->
+      <div class="col-6">
+        <img src="./assets/images/456.jpg" class="img-fluid" alt="picture">
+      </div>
+    </div>
+
+    <!-- #3 -->
+    <div class="row mb-10">
+      <!-- 左邊 -->
+      <div class="col-6">
+        <img src="./assets/images/789.jpg" class="img-fluid" alt="picture">
+      </div>
+      <!-- 右邊 -->
+      <div class="col-6">
+        <div class="pl125 d-flex flex-column">
+          <h4 class="mt121 font-weight-bold pb-3">Marvelous Detail</h4>
+          <h5 class="pb-4">In Craftsman, the art director, working with <br />marketers, develops or creates an idea of
+            a new <br />creation.
+          </h5>
+          <h5 class="font-weight-bold featuresTxtColorGreen">Learn More</h5>
+        </div>
+      </div>
+    </div>
+</section>
+
+<!-- ３.生活的工藝美學 -->
+<section class="crafts">
+  <div class="container craftsBg mb-10">
+    <div class="row d-flex justify-content-around">
+      <div class="col-9">
+        <div class="row">
+          <div class="col-6 hyperTag">
+            <h2>“I want to make the life more simple by crafts.”</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <h5 class="mb-1 hyperTag2">Art Director</h5>
+        <h4 class="mb-3 hyperTag">hsiao-Ming Chen</h4>
+        <p class="socialMedia font-weight-bold mr-4"> <a href="#">Instagram</a></p>
+        <p class="socialMedia font-weight-bold"><a href="#">Twitter</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- 4.特惠實施中 -->
+<section class="onSale">
+  <div class="container">
+    <div class="row mb-10">
+
+      <div class="col-4">
+        <div class="row">
+          <div class="card resetCards">
+            <img src="./assets/images/tom-crew-XtyxEBiA8D8-unsplash.jpg" class="card-img-top imgSize" alt="...">
+            <div class="card-body">
+              <h4 class="font-weight-bold mt-2 mb-1">Tatami Cup</h4>
+              <h5 class="onsaleTxt mr-2">NT$1,080</h5>
+              <h5 class="onsaleTxtStrike ">NT$1,200</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="row">
+          <div class="card resetCards">
+            <img src="./assets/images/tom-crew-7HuTGlUfQSo-unsplash.jpg" class="card-img-top imgSize" alt="...">
+            <div class="card-body">
+              <h4 class="font-weight-bold mt-2 mb-1">Couple Collection</h4>
+              <h5 class="onsaleTxt mr-2">NT$2,800</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-4">
+        <div class="row">
+          <div class="card resetCards">
+            <img src="./assets/images/tom-crew-8_ldgq801cE-unsplash.jpg" class="card-img-top imgSize" alt="...">
+            <div class="card-body">
+              <h4 class="font-weight-bold mt-2 mb-1">Brotherhood Vase</h4>
+              <h5 class="onsaleTxt mr-2">NT$4,800</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="col-4">
+        <div class="row">
+          <div class="card resetCards">
+            <img src="./assets/images/tom-crew-bgIO-u4GEfI-unsplash.jpg" class="card-img-top imgSize" alt="...">
+            <div class="card-body">
+              <h4 class="font-weight-bold mt-2 mb-1">Baifan Bowl</h4>
+              <h5 class="onsaleTxt mr-2">NT$1,800</h5>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+
+    </div>
+  </div>
+
 </section>
